# underwriting-mcp

./: .dockerignore  .gitignore  IMPLEMENTATION_STATUS.md  Makefile  README.md  UNDERWRITING_MCP_IMPLEMENTATION.md  UNDERWRITING_MCP_IMPLEMENTATION_V2.md  WINDOWS_HANDOFF_FOR_CHATGPT.md  cdk.json  install-windows-demo.ps1  package-lock.json  package.json  pyproject.toml  tsconfig.json
deploy/cowork/: README.md  render_config.py
docs/: ARCHITECTURE.md  DATA_BOUNDARY.md  DEMO.md  DEPLOY.md  MULTI_PC_DEMO.md  SECURITY.md  SELF_SERVE_MCPB_IMPLEMENTATION_HANDOFF.md  TROUBLESHOOTING.md  UNDERWRITING_AGENT_EVIDENCE_PRIORITIES.md  UNDERWRITING_AGENT_TEST_PLAN.md  underwriting-mcp-architecture.drawio
infra/lib/: data-stack.ts  mcp-stack.ts  (+2 more)
lambdas/: __init__.py
prompts/: explain-result.md  extract-canonical-facts.md  generate-decision-narrative.md  parse-scenario-changes.md  repair-canonical-facts.md
samples/: README.md
schemas/: canonical-facts.schema.json  underwriting-result.schema.json
scripts/: check_live_prereqs.py  generate_sample_pdfs.py  generate_schemas.py  issue_demo_mcp_token.py  run_mock_demo.py  smoke_test_mcp.py  verify_data_boundary.py
underwriting_app/: __init__.py  clock.py  demo_seed.py  errors.py  factory.py  ids.py  models.py  ports.py  service.py  upload_validation.py
underwriting_core/: __init__.py  agent.py  assembly.py  canonical.py  enums.py  explain.py  facts.py  result.py  whatif.py
underwriting_mcp/: __init__.py  __main__.py  auth.py  config.py  server.py  tool_models.py  upload_api.py
workflows/: underwriting.asl.json
(+66 files in other folders)
